--- a/gift/gift.html
+++ b/gift/gift.html
@@ -31,8 +31,8 @@ Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
-I've never made a full-blown HTML code for people to return to. Not like this. I took 
-ONE coding class 2 years ago and even then, I was not great at coding. But I <strong>REALLY</strong> wanted to do something 
+I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
+then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something 
 cool. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland so I made it look nicer and added all the content myself. More and more ideas came up. I was only going to do 
