--- a/gift/gift.html
+++ b/gift/gift.html
@@ -32,8 +32,8 @@ celebrated, and it's not even a national holiday. Heck, it just says people eat 
 KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
-then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something 
-cool. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
+then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
+for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland so I made it look nicer and added all the content myself. More and more ideas came up. I was only going to do 
 one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I had 2 weeks to finish it. 
