--- a/gift/gift.html
+++ b/gift/gift.html
@@ -34,7 +34,7 @@ holiday to me; I wanted to share that with you. <br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
-customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
+how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland so I made it look nicer and added all the content myself. More and more ideas came up. I was only going to do 
 one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I had 2 weeks to finish it. 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
