--- a/gift/gift.html
+++ b/gift/gift.html
@@ -35,8 +35,8 @@ I've never made a full-blown HTML code for people to return to. Not like this. I
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
-so bland and boring so I made it look nicer and added all the content myself. IN doing that, more and more ideas came up. I was only going to do 
-one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I had 2 weeks to finish it. 
+so bland and boring so I made it look nicer and added all the content myself. In doing that, more and more ideas came up. I was only going to do 
+one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
