--- a/gift/gift.html
+++ b/gift/gift.html
@@ -31,6 +31,12 @@ Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
+To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
+I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
+searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
+be the best I could do. Then I remembered I could somewhat code. I'm still writing you something. Telling you my thought 
+process on this entire thing. I mean I learned quite some stuff. Whether I'll use it in the future is a different question 
+but 'oh well!' It was fun- because it was for you. <br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
@@ -40,11 +46,7 @@ one page, this one, Day 25. Then I got the idea to make a whole advent calendar.
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
-To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
-I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
-searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
-be the best I could do. Tell you my thought process on this entire thing. I mean I learned quite some stuff. Whether I'll 
-use it in the future is a different question but 'oh well!' It was fun- because it was for you. <br><br>
+
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I've made it my 
 goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
