--- a/gift/gift.html
+++ b/gift/gift.html
@@ -29,7 +29,7 @@
                 Beautiful, <br><br>
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
-KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
+KFC Day in Japan or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
 To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
