--- a/gift/gift.html
+++ b/gift/gift.html
@@ -26,7 +26,7 @@
 <br><hr>
         <div>
             <p>
-                Beautiful, <br><br>
+                <p>Beautiful,<p>
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day in Japan or smth? idek :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, joyful, and fun 
@@ -50,7 +50,7 @@ to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I've made it my 
 goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
-wrong to bring in God to this, but I pray He is always watching and protecting you. <br><br> 
+wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
             </p>
