--- a/gift/gift.html
+++ b/gift/gift.html
@@ -26,7 +26,7 @@
 <br><hr>
         <div>
             <p>
-                <p>Beautiful,<p>
+                Beautiful,
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day in Japan or smth? idek :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, joyful, and fun 
@@ -53,10 +53,10 @@ I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, 
 wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
-            </p>
             <p style="text-align: right"> 
                 Always wishing you the Best, <br> Susan Gonzalez
             </p>
+        </p>
         </div>
         <div>
             <a href="https://rubyscarf.github.io/foryou/index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
