--- a/gift/gift.html
+++ b/gift/gift.html
@@ -53,9 +53,9 @@ I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, 
 wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
-            <em style="text-align: right"> 
+            <div style="text-align: right"> 
                 Always wishing you the Best, <br> Susan Gonzalez
-            </em>
+            </div>
         </p>
         </div>
         <div>
