--- a/gift/gift.html
+++ b/gift/gift.html
@@ -26,7 +26,7 @@
 <br><hr>
         <div>
             <p>
-                Beautiful, <be><br>
+                Beautiful, <br><br>
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day in Japan or smth? idek :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, joyful, and fun 
@@ -53,9 +53,9 @@ I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, 
 wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
-            <div style="text-align: right"> 
+            <em style="text-align: right"> 
                 Always wishing you the Best, <br> Susan Gonzalez
-            </div>
+            </em>
         </p>
         </div>
         <div>
