--- a/gift/gift.html
+++ b/gift/gift.html
@@ -52,8 +52,8 @@ goal to make your experience superb. Idk how I'll ever match up to this again. W
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
 wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
-You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
-            <span style="text-align: right"> 
+You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you.  <be><br>
+            <span> 
                 Always wishing you the Best, <br> Susan Gonzalez
             </span>
         </p>
