--- a/gift/gift.html
+++ b/gift/gift.html
@@ -34,9 +34,9 @@ holiday to me; I wanted to share that with you. <br><br>
 To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
-be the best I could do. Then I remembered I could somewhat code. I'm still writing you something. Telling you my thought 
-process on this entire thing. I mean I learned quite some stuff. Whether I'll use it in the future is a different question 
-but 'oh well!' It was fun- because it was for you. <br><br>
+be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you something. A whole lot.
+I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
+you. I also learned a lot, whether or not I'll ever use it is another question but um- 'Oh well!"<br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
