--- a/gift/gift.html
+++ b/gift/gift.html
@@ -36,7 +36,7 @@ I drew the image above on the first week I planned to do any of this, but it did
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
 be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you something. A whole lot.
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
-you. I also learned a lot, whether or not I'll ever use it is another question but um- 'Oh well!"<br><br>
+you. I also learned a lot, whether or not I'll ever use it is another question but um- 'oh well!"<br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
@@ -53,7 +53,7 @@ I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, 
 wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
 You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you.  <br><br>
-            <span class="regards"  style="text-align: right;"> 
+            <span class="regards" style="display: block; text-align: right;"> 
                 Always wishing you the Best, <br> Susan Gonzalez
             </span>
         </p>
