--- a/gift/gift.html
+++ b/gift/gift.html
@@ -46,13 +46,13 @@ one page, this one, Day 25. Then I got the idea to make a whole advent calendar.
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
-
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I've made it my 
 goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
-I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
-wrong to bring God into this, but I pray He is always watching and protecting you. <br><br> 
-You mean so much to me Yuri. <br>
-You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you.  <br><br>
+I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. 
+You mean so much to me Yuri. You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride 
+along with you on the journey. I love you so darn much. <br>
+idk if it's wrong to bring God into this, but I pray He is always watching and protecting you.
+
             <span class="regards" style="display: block; text-align: right;"> 
                 Always wishing you the Best, <br> Susan Gonzalez
             </span>
