--- a/gift/gift.html
+++ b/gift/gift.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="snow">
         <h1 class="text" style="font-size: 3rem;"> Merry <br> Christmas</h1>
         <h2 class="text" style="font-size:1rem; color: #bfbfbf;"> i drew this for you c: </h2>
     
@@ -61,5 +62,6 @@ idk if it's wrong to bring God into this, but I pray He is always watching and p
         <div>
             <a href="https://rubyscarf.github.io/foryou/index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
         </div>
+    </div>
 </body>
 </html>
