--- a/gift/gift.html
+++ b/gift/gift.html
@@ -43,7 +43,7 @@ then, I was not really that great at it. But one thing was clear: I <strong>REAL
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland and boring so I made it look nicer and added all the content myself. In doing that, more and more ideas came up. I was only going to do 
-one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
+one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
