--- a/gift/gift.html
+++ b/gift/gift.html
@@ -32,7 +32,7 @@ Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day in Japan or smth? idek :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
-To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
+To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put on this page. 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
 be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you something. A whole lot.
