--- a/gift/gift.html
+++ b/gift/gift.html
@@ -35,7 +35,7 @@ holiday to me; I wanted to share that with you. <br><br>
 To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put on this page. 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
-be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you something. A whole lot.
+be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you sOmEtHiNg. A whole lot.
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I also learned a lot, whether or not I'll ever use it is another question but um- 'oh well!"<br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
