--- a/gift/gift.html
+++ b/gift/gift.html
@@ -37,7 +37,7 @@ I drew the image above on the first week I planned to do any of this, but it did
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
 be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you sOmEtHiNg. A whole lot of something, this whole repository.
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
-you. I also learned a lot, whether or not I'll ever use it is another question but um- 'oh well!"<br><br>
+you. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!"<br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
