--- a/gift/gift.html
+++ b/gift/gift.html
@@ -39,7 +39,7 @@ be the best I could do. Then I remembered I could somewhat code. Technically I'm
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!"<br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
-then, I was not really that great at it. But one thing was clear: I <strong>REALLY</strong> wanted to do something cool 
+then, I was not really that great at it. But I had one thing was clear for this: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland and boring so I made it look nicer and added all the content myself. In doing that, more and more ideas came up. I was only going to do 
