--- a/gift/gift.html
+++ b/gift/gift.html
@@ -41,8 +41,8 @@ you. I also learned a lot, whether or not I'll ever use it is another question b
 I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But I had one thing was clear for this: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
-how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
-so bland and boring so I made it look nicer and added all the content myself. In doing that, more and more ideas came up. I was only going to do 
+how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked the advent calendar page and all the JavaScript stuff up. They were 
+so bland and boring so I had to make it look nicer. I added all the content myself, hand selected for you. In doing that, more and more ideas came up. I was only going to do 
 one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
