--- a/gift/gift.html
+++ b/gift/gift.html
@@ -35,14 +35,19 @@ holiday to me; I wanted to share that with you. <br><br>
 To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put on this page. 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
-be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you <em>something</em>. A whole lot of something, this whole repository. I made one for Bryce too, but I didn't put as much effort into it as I did this one. His is only 24 days and it's kinda basic. The point is I put a ton of effort into this gift. <br><br>
+be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you <em>something</em>. A 
+whole lot of something, this whole repository. I made one for Bryce too, but I didn't put as much effort into it as I did 
+this one. His is only 24 days and it's kinda basic. The point is I put a ton of effort into this gift. <br><br>
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
-you. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!" I've never made a full-blown HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
+you. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!" I've never made a full-blown 
+HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
-how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked the advent calendar page and all the JavaScript stuff up. They were 
-so bland and boring so I had to make it look nicer. I added all the content myself, hand selected for you. In doing that, more and more ideas came up. I was only going to do 
-one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
+how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
+so bland and boring so I had to make it look nicer. Luckily I kinda understand HTML and CSS so I fixed that and I added all 
+the content myself, all hand-selected for you. In doing that, more and more ideas came up. I was only going to do 
+one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to 
+make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
