--- a/gift/gift.html
+++ b/gift/gift.html
@@ -51,8 +51,8 @@ make a whole advent calendar. By that time, I only had 2 weeks to finish it and 
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
-Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I've made it my 
-goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
+Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I made it my 
+goal to make your experience superb. I hope I was successful. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. 
 You mean so much to me Yuri. You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride 
 along with you on the journey. I love you so darn much. <br>
