--- a/gift/gift.html
+++ b/gift/gift.html
@@ -52,8 +52,8 @@ But I was committed, I wanted to do it so bad because I thought it would be cool
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I made it my 
-goal to make your experience superb. I hope I was successful. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
-I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. I hope I was able to distract you from the bad things in life. 
+goal to make your experience superb. I hope I was somewhat successful. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
+I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. And most of all, I hope I was able to distract you a teeny tiny bit from the bad things in life. 
 You mean so much to me Yuri. I wish I could give you the world. I don't quite think I can do that, but I sure wanna ride 
 along with you on the journey. I love you so darn much. <br>
 idk if it's wrong to bring God into this, but I pray He is always watching and protecting you.
