--- a/gift/gift.html
+++ b/gift/gift.html
@@ -47,7 +47,7 @@ how to customize it and make it amazing. I did not quite code the entirety from 
 so bland and boring so I had to make it look nicer. Luckily I kinda understand HTML and CSS so I fixed that and I added all 
 the content myself, all hand-selected for you. In doing that, more and more ideas came up. I was only going to do 
 one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to 
-make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. 
+make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. How was I gonna make that happen in time...? idk.
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
